JumpScript/tests/baselines/reference/exportAssignmentOfDeclaredExternalModule.errors.txt
tests/cases/compiler/exportAssignmentOfDeclaredExternalModule_1.jump(3,13): error TS2693: 'Sammy' only refers to a type, but is being used as a value here.
tests/cases/compiler/exportAssignmentOfDeclaredExternalModule_1.jump(4,9): error TS2693: 'Sammy' only refers to a type, but is being used as a value here.


==== tests/cases/compiler/exportAssignmentOfDeclaredExternalModule_1.jump (2 errors) ====
    ///<reference path='exportAssignmentOfDeclaredExternalModule_0.jump'/>
    import Sammy = require('./exportAssignmentOfDeclaredExternalModule_0');
    var x = new Sammy(); // error to use as constructor as there is not constructor symbol
                ~~~~~
!!! error TS2693: 'Sammy' only refers to a type, but is being used as a value here.
    var y = Sammy(); // error to use interface name as call target
            ~~~~~
!!! error TS2693: 'Sammy' only refers to a type, but is being used as a value here.
    var z: Sammy; // no error - z is of type interface Sammy from module 'M'
    var a = new z(); // constructor - no error
    var b = z(); // call signature - no error
==== tests/cases/compiler/exportAssignmentOfDeclaredExternalModule_0.jump (0 errors) ====
    interface Sammy {
        new (): any; // a constructor signature
            (): number; // a 0 arg call signature
        }
    export = Sammy;
    